--- a/.github/workflows/asan.yaml
+++ b/.github/workflows/asan.yaml
@@ -18,3 +18,4 @@ jobs:
         rmf_robot_sim_common
         rmf_robot_sim_gz_classic_plugins
         rmf_robot_sim_gz_plugins
+      dist-matrix: '[{"ros_distribution": "humble", "ubuntu_distribution": "jammy"}]'
